--- a/install_wordpress.yml
+++ b/install_wordpress.yml
@@ -2,8 +2,9 @@
 - hosts: wordpress_nodes
   become: yes
   vars:
-    wp_install_directory: /var/www/wordpress
-    database_name: blog
+    project_name: wordpress-install
+    wp_install_directory: /var/www/{{ project_name }}
+    dbuser: user_{{ project_name }}
   tasks:
     - include_tasks: tasks/os-dependencies.yml
     - include_tasks: tasks/manage-db.yml
